Add fulfillment SKUs article
* Add article for fulfillment sku functionality
* Fix timestamp on fulfillment tokens index page

No changelog

Closes #94

--- a/docs/data/articles.yml
+++ b/docs/data/articles.yml
@@ -74,6 +74,7 @@ orders:
   orders-and-items.html.md: /articles/orders-and-items.html.md
   order-life-cycle.html.md: /articles/order-life-cycle.html.md
   shipping.html.md: /articles/shipping.html.md
+  fulfillemnt-skus.html.md: /articles/fulfillment-skus.html.md
 users:
   configure-logins-and-authentication.html.md: /articles/configure-logins-and-authentication.html.md
 navigation:
