Implement Tribute.js for comment notifications
WORKAREA-6

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
       "expect": true,
       "sinon": true,
       "fixture": true,
-      "chai": true
+      "chai": true,
+      "Tribute": true
     }
 }
