Build Documentation From Master Branch
No changelog

WORKAREA-123

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,7 +4,7 @@ on:
     types: [published]
   push:
     branches:
-      - 'v3.4-stable'
+      - 'master'
     paths:
       - 'docs/*'
       - 'docs/*/*'
