Update github workflow to ignore paths that do not require CI runs
No changelog

WORKAREA-132

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,11 @@
 name: CI
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - '.github/**'
+      - 'demo/**'
+      - 'docs/**'
+      - '**.md'
 
 jobs:
   static_analysis:
