Build docs from branch v3.5-stable
No changelog

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,7 +4,7 @@ on:
     types: [published]
   push:
     branches:
-      - 'master'
+      - 'v3.5-stable'
     paths:
       - 'docs/*'
       - 'docs/*/*'
