--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -7,3 +7,7 @@ gem 'middleman-autoprefixer', '~> 2.10.1'
 gem 'middleman-search', github: 'workarea-commerce/middleman-search'
 gem 'middleman-navtree', '~> 0.1.10'
 gem 'puma', '>= 4.3.1'
+
+# Newer version causes Content-Length header error. Remove this when
+# https://github.com/middleman/middleman/issues/2309 is resolved.
+gem 'rack', '2.0.8'
