--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,17 @@ jobs:
       with:
         command: cd admin && bin/rails test -b
 
+  admin_teaspoon:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-ruby@v1
+      with:
+        ruby-version: 2.6.x
+    - uses: workarea-commerce/ci/test@v1
+      with:
+        command: cd admin && bin/rails teaspoon
+
   admin_system_tests:
     runs-on: ubuntu-latest
     steps:
@@ -41,6 +52,17 @@ jobs:
       with:
         name: Admin Screenshots
         path: admin/test/dummy/tmp/screenshots
+
+  core_teaspoon:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-ruby@v1
+      with:
+        ruby-version: 2.6.x
+    - uses: workarea-commerce/ci/test@v1
+      with:
+        command: cd core && bin/rails teaspoon
 
   core_tests:
     runs-on: ubuntu-latest
@@ -63,6 +85,17 @@ jobs:
     - uses: workarea-commerce/ci/test@v1
       with:
         command: cd storefront && bin/rails test -b
+
+  storefront_teaspoon:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-ruby@v1
+      with:
+        ruby-version: 2.6.x
+    - uses: workarea-commerce/ci/test@v1
+      with:
+        command: cd storefront && bin/rails teaspoon
 
   storefront_system_tests:
     runs-on: ubuntu-latest
